--- a/front-end/frontEnd/package.json
+++ b/front-end/frontEnd/package.json
@@ -20,9 +20,12 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "autoprefixer": "^10.4.13",
     "bootstrap": "^5.2.3",
     "font-awesome": "^4.7.0",
+    "postcss": "^8.4.21",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^3.2.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
